Whiteboard: fix layout when log is visible.

--- a/browsernode/static/whiteboard.css
+++ b/browsernode/static/whiteboard.css
@@ -352,3 +352,7 @@
 	width: 800px;
 	height: 600px;
 }
+
+#log {
+	clear: both;
+}
